Fixed spacing issues

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -157,6 +157,8 @@ main
 
 .reviews-count
   font-weight: bold
+  span
+    margin-right: 0.25em
   select
     border: none
     border-bottom: 1px solid black
@@ -202,6 +204,10 @@ main
 
 .recommend, .reviewer
   margin-bottom: 1em
+
+.recommend
+  i
+    margin-right: 0.5em
 
 .response
   background-color: lightgray
